--- a/index.html
+++ b/index.html
@@ -43,10 +43,15 @@
             </nav>
             <ul class="header-list">
                 <li class="header-item">
-                    <a class="header-mail" href="info@devstudio.com">info@devstudio.com</a>
+                    <a class="header-mail" href="info@devstudio.com"> <svg class="header-icon" width="16px"
+                            height="12px">
+                            <use href="./images/symbol-defs.svg#envelope-1"></use>
+                        </svg>info@devstudio.com</a>
                 </li>
                 <li class="header-item">
-                    <a class="header-namber" href="+380961111111">+38 096 111 11 11</a>
+                    <a class="header-namber" href="+380961111111"> <svg class="header-icon" width="10px" height="16px">
+                            <use href="./images/symbol-defs.svg#smartphone"></use>
+                        </svg>+38 096 111 11 11</a>
                 </li>
             </ul>
     </header>
@@ -64,12 +69,18 @@
                 <h2 hidden class="about-hidden">About</h2>
                 <ul class="about-list">
                     <li class="about-title">
+                        <div class="thumb"><svg class="icon-anten" width="70px" height="70">
+                                <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                            </svg></div>
                         <h3 class="about-text">Внимание к деталям</h3>
                         <p class="about-item">Идейные соображения, а также начало повседневной работы по
                             формированию
                             позиции.</p>
                     </li>
                     <li class="about-title">
+                        <div class="thumb"><svg class="icon-anten" width="70px" height="70">
+                                <use href="./images/symbol-defs.svg#icon-clock"></use>
+                            </svg></div>
                         <h3 class="about-text">Пунктуальность</h3>
                         <p class="about-item">Задача организации, в особенности же рамки и место обучения кадров
                             влечет
@@ -78,11 +89,17 @@
                         </p>
                     </li>
                     <li class="about-title">
+                        <div class="thumb"><svg class="icon-anten" width="70px" height="70">
+                                <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                            </svg></div>
                         <h3 class="about-text">Планирование</h3>
                         <p class="about-item">Равным образом консультация с широким активом в значительной степени
                             обуславливает.</p>
                     </li>
                     <li class="about-title">
+                        <div class="thumb"><svg class="icon-anten" width="70px" height="70">
+                                <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                            </svg></div>
                         <h3 class="about-text">Современные технологии</h3>
                         <p class="about-item">Значимость этих проблем настолько очевидна, что реализация плановых
                             заданий.</p>
@@ -111,6 +128,28 @@
                         <div class="team">
                             <h3 class="team-name">Игорь Демьяненко</h3>
                             <p leng="en" class="team-item">Product Designer</p>
+                            <div class="team-tumb">
+                                <a class="team-link" href="">
+                                    <svg class="social-link" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#instagram"></use>
+                                    </svg>
+                                </a>
+                                <a class="team-link" href="">
+                                    <svg class="social-link" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#twitter"></use>
+                                    </svg>
+                                </a>
+                                <a class="team-link" href="">
+                                    <svg class="social-link" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#facebook"></use>
+                                    </svg>
+                                </a>
+                                <a class="team-link" href="">
+                                    <svg class="social-link" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#linkedin"></use>
+                                    </svg>
+                                </a>
+                            </div>
                         </div>
                     </li>
                     <li>
@@ -118,6 +157,28 @@
                         <div class="team">
                             <h3 class="team-name">Ольга Репина</h3>
                             <p leng="en" class="team-item">Frontend Developer</p>
+                            <div class="team-tumb">
+                                <a class="team-link" href="">
+                                    <svg class="social-link" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#instagram"></use>
+                                    </svg>
+                                </a>
+                                <a class="team-link" href="">
+                                    <svg class="social-link" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#twitter"></use>
+                                    </svg>
+                                </a>
+                                <a class="team-link" href="">
+                                    <svg class="social-link" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#facebook"></use>
+                                    </svg>
+                                </a>
+                                <a class="team-link" href="">
+                                    <svg class="social-link" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#linkedin"></use>
+                                    </svg>
+                                </a>
+                            </div>
                         </div>
                     </li>
                     <li>
@@ -125,6 +186,28 @@
                         <div class="team">
                             <h3 class="team-name" 3>Николай Тарасов</h3>
                             <p leng="en" class="team-item">Marketing</p>
+                            <div class="team-tumb">
+                                <a class="team-link" href="">
+                                    <svg class="social-link" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#instagram"></use>
+                                    </svg>
+                                </a>
+                                <a class="team-link" href="">
+                                    <svg class="social-link" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#twitter"></use>
+                                    </svg>
+                                </a>
+                                <a class="team-link" href="">
+                                    <svg class="social-link" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#facebook"></use>
+                                    </svg>
+                                </a>
+                                <a class="team-link" href="">
+                                    <svg class="social-link" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#linkedin"></use>
+                                    </svg>
+                                </a>
+                            </div>
                         </div>
                     </li>
                     <li>
@@ -132,28 +215,128 @@
                         <div class="team">
                             <h3 class="team-name" 3>Михаил Ермаков</h3>
                             <p leng="en" class="team-item">UI Designer</p>
+                            <div class="team-tumb">
+                                <a class="team-link" href="">
+                                    <svg class="social-link" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#instagram"></use>
+                                    </svg>
+                                </a>
+                                <a class="team-link" href="">
+                                    <svg class="social-link" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#twitter"></use>
+                                    </svg>
+                                </a>
+                                <a class="team-link" href="">
+                                    <svg class="social-link" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#facebook"></use>
+                                    </svg>
+                                </a>
+                                <a class="team-link" href="">
+                                    <svg class="social-link" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#linkedin"></use>
+                                    </svg>
+                                </a>
+                            </div>
                         </div>
                     </li>
                 </ul>
             </div>
         </section>
+        <!-- Clients -->
+        <section class="section-clients">
+            <div class="container">
+                <h1 class="clients">Постоянные клиенты</h1>
+                <ul class="clients-list">
+                    <li>
+                        <div class="clients-thumb">
+                            <svg class="clients-icon" width="106px" height="60px">
+                                <use href="./images/symbol-defs.svg#icon-Logo-1-1"></use>
+                            </svg>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="clients-thumb">
+                            <svg class="clients-icon" width="106px" height="60px">
+                                <use href="./images/symbol-defs.svg#icon-Logo-2-1"></use>
+                            </svg>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="clients-thumb">
+                            <svg class="clients-icon" width="106px" height="60px">
+                                <use href="./images/symbol-defs.svg#icon-Logo-3-1"></use>
+                            </svg>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="clients-thumb">
+                            <svg class="clients-icon" width="106px" height="60px">
+                                <use href="./images/symbol-defs.svg#icon-Logo-4-4"></use>
+                            </svg>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="clients-thumb">
+                            <svg class="clients-icon" width="106px" height="60px">
+                                <use href="./images/symbol-defs.svg#icon-Logo-5-1"></use>
+                            </svg>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="clients-thumb">
+                            <svg class="clients-icon" width="106px" height="60px">
+                                <use href="./images/symbol-defs.svg#icon-Logo-6-1"></use>
+                            </svg>
+                        </div>
+                    </li>
+
+                </ul>
+            </div>
+        </section>
     </main>
     <!--Footer-->
-    <footer class="footer">
+    <section class="footer">
         <div class="footer-container">
-            <a href="/" class="footer-logo">Web<span class="foot-logo">Studio</span></a>
-            <ul class="footer-link">
-                <li><a class="footer-addres" href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener-noreferrer">г.
-                        Киев,
-                        пр-т
-                        Леси Украинки, 26</a> </li>
-                <li><a class="footer-mail" href="mailto:info@devstudio.com"><span>info@example.com</span></a>
-                </li>
-                <li><a class="footer-tell" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
-            </address>
+            <div class="footer-bloc">
+                <a href="/" class="footer-logo">Web<span class="foot-logo">Studio</span></a>
+                <ul class="footer-link">
+                    <li><a class="footer-addres" href="https://bit.ly/3pXMvUd" target="_blank"
+                            rel="noopener-noreferrer">г.
+                            Киев,
+                            пр-т
+                            Леси Украинки, 26</a> </li>
+                    <li><a class="footer-mail" href="mailto:info@devstudio.com"><span>info@example.com</span></a>
+                    </li>
+                    <li><a class="footer-tell" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
+            </div>
+            <section class="footer-tumb">
+                <h1 class="footer-title">присоединяйтесь</h1>
+                <div class="team-tumb">
+                    <a class="team-link" href="">
+                        <svg class="social-link" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#instagram"></use>
+                        </svg>
+                    </a>
+                    <a class="team-link" href="">
+                        <svg class="social-link" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#twitter"></use>
+                        </svg>
+                    </a>
+                    <a class="team-link" href="">
+                        <svg class="social-link" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#facebook"></use>
+                        </svg>
+                    </a>
+                    <a class="team-link" href="">
+                        <svg class="social-link" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#linkedin"></use>
+                        </svg>
+                    </a>
+                </div>
+            </section>
         </div>
-    </footer>
+    </section>
 </body>
 
 </html>
