--- a/portfolio.html
+++ b/portfolio.html
@@ -76,12 +76,14 @@
                     </li>
                 </ul>
                 <ul class="portfolio-card">
-                    <li>
-                        <img src="./images.portfolio/img(1)(1).png" alt="team members" width="370">
-                        <div class="portfolio-text">
-                            <h2 class="portfolio-title">Технокряк</h2>
-                            <p class="portfolio-item">Веб-сайт</p>
-                        </div>
+                    <li class="first-card">
+                        <a href=""><img src="./images.portfolio/img(1)(1).png" alt="team members" width="370">
+                            <div class="portfolio-text">
+                                <h2 class="portfolio-title">Технокряк</h2>
+                                <p class="portfolio-item">Веб-сайт</p>
+                            </div>
+                        </a>
+
                     </li>
                     <li>
                         <img src="./images.portfolio/img(2)(1).png" alt="football players poster" width="370">
