--- a/portfolio.html
+++ b/portfolio.html
@@ -41,10 +41,15 @@
             </nav>
             <ul class="header-list">
                 <li class="header-item">
-                    <a class="header-mail" href="info@devstudio.com">info@devstudio.com</a>
+                    <a class="header-mail" href="info@devstudio.com"> <svg class="header-icon" width="16px"
+                            height="12px">
+                            <use href="./images/symbol-defs.svg#envelope-1"></use>
+                        </svg>info@devstudio.com</a>
                 </li>
                 <li class="header-item">
-                    <a class="header-namber" href="+380961111111">+38 096 111 11 11</a>
+                    <a class="header-namber" href="+380961111111"> <svg class="header-icon" width="10px" height="16px">
+                            <use href="./images/symbol-defs.svg#smartphone"></use>
+                        </svg>+38 096 111 11 11</a>
                 </li>
             </ul>
     </header>
@@ -147,20 +152,49 @@
 
     </main>
     <!--Footer-->
-    <footer class="footer">
-        <div class="footer-container">
-            <a href="/" class="footer-logo">Web<span class="foot-logo">Studio</span></a>
-            <ul class="footer-link">
-                <li><a class="footer-addres" href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener-noreferrer">г.
-                        Киев,
-                        пр-т
-                        Леси Украинки, 26</a> </li>
-                <li><a class="footer-mail" href="mailto:info@devstudio.com"><span>info@example.com</span></a>
-                </li>
-                <li><a class="footer-tell" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
-            </address>
-        </div>
+    <footer>
+        <section class="footer">
+            <div class="footer-container">
+                <div class="footer-bloc">
+                    <a href="/" class="footer-logo">Web<span class="foot-logo">Studio</span></a>
+                    <ul class="footer-link">
+                        <li><a class="footer-addres" href="https://bit.ly/3pXMvUd" target="_blank"
+                                rel="noopener-noreferrer">г.
+                                Киев,
+                                пр-т
+                                Леси Украинки, 26</a> </li>
+                        <li><a class="footer-mail" href="mailto:info@devstudio.com"><span>info@example.com</span></a>
+                        </li>
+                        <li><a class="footer-tell" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    </ul>
+                </div>
+                <section class="footer-tumb">
+                    <h1 class="footer-title">присоединяйтесь</h1>
+                    <div class="team-tumb">
+                        <a class="team-link" href="">
+                            <svg class="social-link" width="20px" height="20px">
+                                <use href="./images/symbol-defs.svg#instagram"></use>
+                            </svg>
+                        </a>
+                        <a class="team-link" href="">
+                            <svg class="social-link" width="20px" height="20px">
+                                <use href="./images/symbol-defs.svg#twitter"></use>
+                            </svg>
+                        </a>
+                        <a class="team-link" href="">
+                            <svg class="social-link" width="20px" height="20px">
+                                <use href="./images/symbol-defs.svg#facebook"></use>
+                            </svg>
+                        </a>
+                        <a class="team-link" href="">
+                            <svg class="social-link" width="20px" height="20px">
+                                <use href="./images/symbol-defs.svg#linkedin"></use>
+                            </svg>
+                        </a>
+                    </div>
+                </section>
+            </div>
+        </section>
     </footer>
 </body>
 
