--- a/index.html
+++ b/index.html
@@ -128,34 +128,32 @@
                         <div class="team">
                             <h3 class="team-name">Игорь Демьяненко</h3>
                             <p leng="en" class="team-item">Product Designer</p>
-                            <div>
-                                <ul class="team-tumb">
-                                    <li><a class="team-link" href="">
-                                            <svg class="social-link" width="20px" height="20px">
-                                                <use href="./images/symbol-defs.svg#instagram"></use>
-                                            </svg>
-                                        </a>
-                                    </li>
-                                    <li><a class="team-link" href="">
-                                            <svg class="social-link" width="20px" height="20px">
-                                                <use href="./images/symbol-defs.svg#twitter"></use>
-                                            </svg>
-                                        </a>
-                                    </li>
-                                    <li><a class="team-link" href="">
-                                            <svg class="social-link" width="20px" height="20px">
-                                                <use href="./images/symbol-defs.svg#facebook"></use>
-                                            </svg>
-                                        </a>
-                                    </li>
-                                    <li><a class="team-link" href="">
-                                            <svg class="social-link" width="20px" height="20px">
-                                                <use href="./images/symbol-defs.svg#linkedin"></use>
-                                            </svg>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
+                            <ul class="team-tumb">
+                                <li><a class="team-link" href="">
+                                        <svg class="social-link" width="20px" height="20px">
+                                            <use href="./images/symbol-defs.svg#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li><a class="team-link" href="">
+                                        <svg class="social-link" width="20px" height="20px">
+                                            <use href="./images/symbol-defs.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li><a class="team-link" href="">
+                                        <svg class="social-link" width="20px" height="20px">
+                                            <use href="./images/symbol-defs.svg#facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li><a class="team-link" href="">
+                                        <svg class="social-link" width="20px" height="20px">
+                                            <use href="./images/symbol-defs.svg#linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li>
@@ -271,48 +269,36 @@
             <div class="container">
                 <h1 class="clients">Постоянные клиенты</h1>
                 <ul class="clients-list">
-                    <li>
-                        <div class="clients-thumb">
-                            <a class="clients-link" href="">
-                                <svg class="clients-icon" width="106px" height="60px">
-                                    <use href="./images/symbol-defs.svg#icon-Logo-1-1"></use>
-                                </svg></a>
-                        </div>
+                    <li class="clients-thumb">
+                        <a class="clients-link" href="">
+                            <svg class="clients-icon" width="106px" height="60px">
+                                <use href="./images/symbol-defs.svg#icon-Logo-1-1"></use>
+                            </svg></a>
                     </li>
-                    <li>
-                        <div class="clients-thumb">
-                            <a class="clients-link" href=""><svg class="clients-icon" width="106px" height="60px">
-                                    <use href="./images/symbol-defs.svg#icon-Logo-2-1"></use>
-                                </svg></a>
-                        </div>
+                    <li class="clients-thumb">
+                        <a class="clients-link" href=""><svg class="clients-icon" width="106px" height="60px">
+                                <use href="./images/symbol-defs.svg#icon-Logo-2-1"></use>
+                            </svg></a>
                     </li>
-                    <li>
-                        <div class="clients-thumb">
-                            <a class="clients-link" href=""><svg class="clients-icon" width="106px" height="60px">
-                                    <use href="./images/symbol-defs.svg#icon-Logo-3-1"></use>
-                                </svg></a>
-                        </div>
+                    <li class="clients-thumb">
+                        <a class="clients-link" href=""><svg class="clients-icon" width="106px" height="60px">
+                                <use href="./images/symbol-defs.svg#icon-Logo-3-1"></use>
+                            </svg></a>
                     </li>
-                    <li>
-                        <div class="clients-thumb">
-                            <a class="clients-link" href=""><svg class="clients-icon" width="106px" height="60px">
-                                    <use href="./images/symbol-defs.svg#icon-Logo-4-4"></use>
-                                </svg></a>
-                        </div>
+                    <li class="clients-thumb">
+                        <a class="clients-link" href=""><svg class="clients-icon" width="106px" height="60px">
+                                <use href="./images/symbol-defs.svg#icon-Logo-4-4"></use>
+                            </svg></a>
                     </li>
-                    <li>
-                        <div class="clients-thumb">
-                            <a class="clients-link" href=""><svg class="clients-icon" width="106px" height="60px">
-                                    <use href="./images/symbol-defs.svg#icon-Logo-5-1"></use>
-                                </svg></a>
-                        </div>
+                    <li class="clients-thumb">
+                        <a class="clients-link" href=""><svg class="clients-icon" width="106px" height="60px">
+                                <use href="./images/symbol-defs.svg#icon-Logo-5-1"></use>
+                            </svg></a>
                     </li>
-                    <li>
-                        <div class="clients-thumb">
-                            <a class="clients-link" href=""><svg class="clients-icon" width="106px" height="60px">
-                                    <use href="./images/symbol-defs.svg#icon-Logo-6-1"></use>
-                                </svg></a>
-                        </div>
+                    <li class="clients-thumb">
+                        <a class="clients-link" href=""><svg class="clients-icon" width="106px" height="60px">
+                                <use href="./images/symbol-defs.svg#icon-Logo-6-1"></use>
+                            </svg></a>
                     </li>
 
                 </ul>
@@ -336,33 +322,31 @@
                         <li><a class="footer-tell" href="tel:+380961111111">+38 096 111 11 11</a></li>
                     </ul>
                 </div>
-                <section>
-                    <div class="footer-tumb">
-                        <h2 class="footer-title">присоединяйтесь</h2>
-                        <ul class="team-tumb">
-                            <li><a class="team-link" href="">
-                                    <svg class="social-link" width="20px" height="20px">
-                                        <use href="./images/symbol-defs.svg#instagram"></use>
-                                    </svg>
-                                </a></li>
-                            <li><a class="team-link" href="">
-                                    <svg class="social-link" width="20px" height="20px">
-                                        <use href="./images/symbol-defs.svg#twitter"></use>
-                                    </svg>
-                                </a></li>
-                            <li><a class="team-link" href="">
-                                    <svg class="social-link" width="20px" height="20px">
-                                        <use href="./images/symbol-defs.svg#facebook"></use>
-                                    </svg>
-                                </a></li>
-                            <li><a class="team-link" href="">
-                                    <svg class="social-link" width="20px" height="20px">
-                                        <use href="./images/symbol-defs.svg#linkedin"></use>
-                                    </svg>
-                                </a></li>
-                        </ul>
-                    </div>
-                </section>
+                <div class="footer-tumb">
+                    <h2 class="footer-title">присоединяйтесь</h2>
+                    <ul class="team-tumb">
+                        <li><a class="team-link" href="">
+                                <svg class="social-link" width="20px" height="20px">
+                                    <use href="./images/symbol-defs.svg#instagram"></use>
+                                </svg>
+                            </a></li>
+                        <li><a class="team-link" href="">
+                                <svg class="social-link" width="20px" height="20px">
+                                    <use href="./images/symbol-defs.svg#twitter"></use>
+                                </svg>
+                            </a></li>
+                        <li><a class="team-link" href="">
+                                <svg class="social-link" width="20px" height="20px">
+                                    <use href="./images/symbol-defs.svg#facebook"></use>
+                                </svg>
+                            </a></li>
+                        <li><a class="team-link" href="">
+                                <svg class="social-link" width="20px" height="20px">
+                                    <use href="./images/symbol-defs.svg#linkedin"></use>
+                                </svg>
+                            </a></li>
+                    </ul>
+                </div>
             </div>
         </section>
     </footer>
