--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,8 @@
                 </ul>
                 <ul class="portfolio-card">
                     <li class="first-card">
-                        <a href=""><img src="./images.portfolio/img(1)(1).png" alt="team members" width="370">
+                        <a class="portfolio-link" href=""><img src="./images.portfolio/img(1)(1).png" alt="team members"
+                                width="370">
                             <div class="portfolio-text">
                                 <h2 class="portfolio-title">Технокряк</h2>
                                 <p class="portfolio-item">Веб-сайт</p>
@@ -168,31 +169,31 @@
                         <li><a class="footer-tell" href="tel:+380961111111">+38 096 111 11 11</a></li>
                     </ul>
                 </div>
-                <section class="footer-tumb">
-                    <h1 class="footer-title">присоединяйтесь</h1>
-                    <div class="team-tumb">
-                        <a class="team-link" href="">
-                            <svg class="social-link" width="20px" height="20px">
-                                <use href="./images/symbol-defs.svg#instagram"></use>
-                            </svg>
-                        </a>
-                        <a class="team-link" href="">
-                            <svg class="social-link" width="20px" height="20px">
-                                <use href="./images/symbol-defs.svg#twitter"></use>
-                            </svg>
-                        </a>
-                        <a class="team-link" href="">
-                            <svg class="social-link" width="20px" height="20px">
-                                <use href="./images/symbol-defs.svg#facebook"></use>
-                            </svg>
-                        </a>
-                        <a class="team-link" href="">
-                            <svg class="social-link" width="20px" height="20px">
-                                <use href="./images/symbol-defs.svg#linkedin"></use>
-                            </svg>
-                        </a>
-                    </div>
-                </section>
+                <div>
+                    <h2 class="footer-title">присоединяйтесь</h2>
+                    <ul class="footer-soclist">
+                        <li class="footer-tumb"><a class="footersoc-link" href="">
+                                <svg class="footer-icon" width="20px" height="20px">
+                                    <use href="./images/symbol-defs.svg#instagram"></use>
+                                </svg>
+                            </a></li>
+                        <li><a class="footersoc-link" href="">
+                                <svg class="footer-icon" width="20px" height="20px">
+                                    <use href="./images/symbol-defs.svg#twitter"></use>
+                                </svg>
+                            </a></li>
+                        <li><a class="footersoc-link" href="">
+                                <svg class="footer-icon" width="20px" height="20px">
+                                    <use href="./images/symbol-defs.svg#facebook"></use>
+                                </svg>
+                            </a></li>
+                        <li><a class="footersoc-link" href="">
+                                <svg class="footer-icon" width="20px" height="20px">
+                                    <use href="./images/symbol-defs.svg#linkedin"></use>
+                                </svg>
+                            </a></li>
+                    </ul>
+                </div>
             </div>
         </section>
     </footer>
