--- a/index.html
+++ b/index.html
@@ -322,26 +322,26 @@
                         <li><a class="footer-tell" href="tel:+380961111111">+38 096 111 11 11</a></li>
                     </ul>
                 </div>
-                <div class="footer-tumb">
+                <div>
                     <h2 class="footer-title">присоединяйтесь</h2>
-                    <ul class="team-tumb">
-                        <li><a class="team-link" href="">
-                                <svg class="social-link" width="20px" height="20px">
+                    <ul class="footer-soclist">
+                        <li class="footer-tumb"><a class="footersoc-link" href="">
+                                <svg class="footer-icon" width="20px" height="20px">
                                     <use href="./images/symbol-defs.svg#instagram"></use>
                                 </svg>
                             </a></li>
-                        <li><a class="team-link" href="">
-                                <svg class="social-link" width="20px" height="20px">
+                        <li><a class="footersoc-link" href="">
+                                <svg class="footer-icon" width="20px" height="20px">
                                     <use href="./images/symbol-defs.svg#twitter"></use>
                                 </svg>
                             </a></li>
-                        <li><a class="team-link" href="">
-                                <svg class="social-link" width="20px" height="20px">
+                        <li><a class="footersoc-link" href="">
+                                <svg class="footer-icon" width="20px" height="20px">
                                     <use href="./images/symbol-defs.svg#facebook"></use>
                                 </svg>
                             </a></li>
-                        <li><a class="team-link" href="">
-                                <svg class="social-link" width="20px" height="20px">
+                        <li><a class="footersoc-link" href="">
+                                <svg class="footer-icon" width="20px" height="20px">
                                     <use href="./images/symbol-defs.svg#linkedin"></use>
                                 </svg>
                             </a></li>
